Fixed more readability issues

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,6 +17,8 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   background-image: url("/img/guttykreum_background.png");
   background-size: cover;
+  background-color: rgba(200,200,200,.5);
+  background-blend-mode: multiply;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
